--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,9 +3,9 @@
 
 // COLORS
 
-$xxx-dark-gray: #1a1a1a;
-$xx-dark-gray: #222222;
-$x-dark-gray: #333333;
+$xxx-dark-gray: #161616;
+$xx-dark-gray: #1c1c1c;
+$x-dark-gray: #222222;
 $dark-gray: #444444;
 $medium-gray: #888888;
 $light-gray: #cccccc;
