--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -17,9 +17,9 @@ $light-purple: #7700dd;
 $x-light-purple: #9900ff;
 
 $dark-blue: #0011aa;
-$medium-blue: #0044dd;
-$light-blue: #0077ff;
-$x-light-blue: #00aaff;
+$medium-blue: #1155dd;
+$light-blue: #2299ff;
+$x-light-blue: #33ddff;
 
 $dark-red: #aa0000;
 $medium-red: #dd2211;
