--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ body,
 
         .view {
             // height: 90vh;
-            width: calc(70vw - #{$xxx-large});
+            width: 70vw;
             padding: 15vh 15vw;
             margin-bottom: 15vh;
             display: flex;
@@ -217,12 +217,55 @@ body,
                         #Glascad-image {
                         }
                         #NorthStar-image {
-                            filter: brightness(1.33);
+                            filter: contrast(1.125);
                         }
                         #DevMountain-image {
                             // filter: brightness(0.95);
                         }
                     }
+                }
+            }
+        }
+
+        #project {
+            .project-title {
+                position: relative;
+
+                span,
+                .project-back-link {
+                    transition: 0.1s;
+                }
+
+                .project-back-link {
+                    width: 100%;
+                    height: 100%;
+                    opacity: 0;
+                    position: absolute;
+                    left: 0;
+                    transition-delay: 0s;
+
+                    &::before {
+                        content: "< ";
+                        color: $x-light-blue;
+                    }
+                }
+
+                &:hover {
+                    > span {
+                        opacity: 0;
+                        // opacity: 0.05;
+                        transition-delay: 0s;
+                    }
+                    .project-back-link {
+                        opacity: 1;
+                        transition-delay: 0.05s;
+                    }
+                }
+
+                + .sub-title {
+                    font-size: $xxx-large;
+                    margin-top: -10vh;
+                    margin-bottom: 10vh;
                 }
             }
         }
@@ -254,12 +297,11 @@ body,
             background: $xxx-dark-gray;
             border-left: 1px solid black;
             transition: all 0.2s;
-            transition-delay: 0.2s;
-
+            
             &.hidden {
                 opacity: 0;
                 transform: translateX(100%);
-                transition-delay: 0s;
+                transition-delay: 0.2s;
             }
 
             .sidebar-link-wrapper {
