--- a/src/index.scss
+++ b/src/index.scss
@@ -196,6 +196,21 @@ body,
                         margin-bottom: $xxx-large;
                         padding-bottom: 0;
                         border: none;
+
+                        .after {
+                            span {
+                                opacity: 0;
+                                color: $x-light-blue;
+                                transition: all 0.1s;
+
+                                &:nth-child(2) {
+                                    transition-delay: 0.1s;
+                                }
+                                &:nth-child(3) {
+                                    transition-delay: 0.2s;
+                                }
+                            }
+                        }
                     }
                     .sub-title {
                         font-size: $xx-large;
@@ -223,6 +238,16 @@ body,
                             // filter: brightness(0.95);
                         }
                     }
+
+                    &:hover {
+                        .title {
+                            .after {
+                                span {
+                                    opacity: 1;
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -231,34 +256,30 @@ body,
             .project-title {
                 position: relative;
 
-                span,
-                .project-back-link {
-                    transition: 0.1s;
-                }
-
-                .project-back-link {
-                    width: 100%;
-                    height: 100%;
-                    opacity: 0;
+                .before {
                     position: absolute;
                     left: 0;
-                    transition-delay: 0s;
-
-                    &::before {
-                        content: "< ";
+                    transform: translateX(-100%);
+                    
+                    span {
+                        opacity: 0;
                         color: $x-light-blue;
+                        transition: all 0.1s;
+
+                        &:first-child {
+                            transition-delay: 0.2s;
+                        }
+                        &:nth-child(2) {
+                            transition-delay: 0.1s;
+                        }
                     }
                 }
 
                 &:hover {
-                    > span {
-                        opacity: 0;
-                        // opacity: 0.05;
-                        transition-delay: 0s;
-                    }
-                    .project-back-link {
-                        opacity: 1;
-                        transition-delay: 0.05s;
+                    .before {
+                        span {
+                            opacity: 1;
+                        }
                     }
                 }
 
@@ -297,7 +318,7 @@ body,
             background: $xxx-dark-gray;
             border-left: 1px solid black;
             transition: all 0.2s;
-            
+
             &.hidden {
                 opacity: 0;
                 transform: translateX(100%);
