fading transition is working

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro|Source+Code+Pro|Itim|Aladin|Shojumaru|McLaren|Lacquer|Maven+Pro|Sedgwick+Ave+Display|Ubuntu+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Anonymous+Pro|Source+Code+Pro|Itim|Aladin|Shojumaru|McLaren|Lacquer|Maven+Pro|Sedgwick+Ave+Display|Ubuntu+Mono&display=swap");
 
 // COLORS
 
@@ -7,9 +6,12 @@ $xxx-dark-gray: #161616;
 $xx-dark-gray: #1c1c1c;
 $x-dark-gray: #242424;
 $dark-gray: #444444;
+$medium-dark-gray: #666666;
 $medium-gray: #888888;
+$medium-light-gray: #afafaf;
 $light-gray: #cccccc;
-$x-light-gray: #eeeeee;
+$x-light-gray: #e2e2e2;
+$xx-light-gray: #eeeeee;
 
 $dark-purple: #220099;
 $medium-purple: #5500bb;
@@ -18,7 +20,7 @@ $x-light-purple: #9900ff;
 
 $dark-blue: #0011aa;
 $medium-blue: #1155dd;
-$light-blue: #2299ff;
+$light-blue: #22aaee;
 $x-light-blue: #33ddff;
 
 $dark-red: #aa0000;
