--- a/src/views/Home/modules/Work.scss
+++ b/src/views/Home/modules/Work.scss
@@ -23,7 +23,7 @@
                 }
 
                 .after {
-                    span {
+                    > span {
                         opacity: 0;
                         transition: all 0.1s;
 
